--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "cookie-universal-nuxt": "^2.0.18",
     "element-ui": "^2.4.11",
     "highlight.js": "^9.16.2",
     "highlightjs-line-numbers.js": "^2.7.0",
+    "js-base64": "^2.5.1",
+    "js-cookie": "^2.2.1",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {}
